# stm32f030_template

./: CMakeLists.txt  readme.md  stm32.cmake
OOCD/: oocd_stlink_v2.cfg
drivers/: CMakeLists.txt  hal_stm32f0xx.cmake  ll_stm32f0xx.cmake
drivers/STM32F0xx_HAL_Driver/Inc/: stm32f0xx_hal.h  stm32f0xx_hal_conf.h
src/: main.c
src/clocker/: clock.c  clock.h
startup/: startup_stm32f030x6.s
